# e_modules

./: .abf.yml  .gitignore  E-MODULES-EXTRA-0.0.1.76819.tar.xz  e_modules-0.0.1.20140902.tar.bz2  e_modules-0.0.1.62680_everything-pidgin_localization.patch  e_modules-0.0.1.62680_everything-tracker_localization.patch  e_modules-0.0.1.62680_xkbswitch_makefile.patch  e_modules-0.0.1.76819_everything-pidgin_localization.patch  e_modules-0.0.1.76819_everything-tracker_localization.patch  e_modules.-bb.20150506-113004.22760.localhost.buildlog  e_modules.-bb.20150506-113348.05354.localhost.buildlog  e_modules.spec  modules-git.sh
e_modules-0.0.1.20150506/comp-scale/po/: LINGUAS  ca.po  gl.po  lt.po  sr.po  tr.po
e_modules-0.0.1.20150506/cpu/: module.desktop.in
e_modules-0.0.1.20150506/cpu/po/: sr.po
e_modules-0.0.1.20150506/desksanity/: module.desktop.in
e_modules-0.0.1.20150506/desksanity/src/: e_mod_main.h  magnify.c  maximize.c  moveresize.c  pip.c  zoom.c
e_modules-0.0.1.20150506/edgar/: AUTHORS  e-module-edgar.edc
e_modules-0.0.1.20150506/edgar/python/: Makefile.am
e_modules-0.0.1.20150506/everything-websearch/: configure.ac
e_modules-0.0.1.20150506/eweather/: configure.ac
e_modules-0.0.1.20150506/news/: module.desktop.in
e_modules-0.0.1.20150506/photo/: module.desktop.in
e_modules-0.0.1.20150506/tclock/: e-module-tclock.edc
e_modules-0.0.1.20150506/wallpaper2/: e_modules-wallpaper2.spec.in
e_modules-0.0.1.20150506/wallpaper2/src/: Makefile.am  e_mod_main.h
e_modules-0.0.1.20150506/wlan/: Makefile.am  configure.ac
(+95 files in other folders)
